@@ -14,11 +14,11 @@ set -e # Exit early if any commands fail
 # - Edit .codecrafters/compile.sh to change how your program compiles remotely
 (
   cd "$(dirname "$0")" # Ensure compile steps are run within the repository directory
-  SBT_OPTS="--enable-native-access=ALL-UNNAMED" sbt assembly
+  scala-cli --power package --server=false -o /tmp/codecrafters-build-shell-scala --assembly --force src/main/scala/
 )
 
 # Copied from .codecrafters/run.sh
 #
 # - Edit this to change how your program runs locally
 # - Edit .codecrafters/run.sh to change how your program runs remotely
-exec java -jar "$(dirname "$0")/target/scala-3.7.4/shell.jar" "$@"
+exec java -jar /tmp/codecrafters-build-shell-scala "$@"
